# NDKApplication

app/: build.gradle
app/src/androidTest/java/com/example/ndkapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ndkapplication/: MainActivity.java  SuperPlayer.java  VideoUtils.java
app/src/main/jni/: Android.mk  CMakeLists.txt  Java_com_example_ndkapplication.h  c_06_jni.c  ffmpeg_player.c  queue.c  queue.h  super_player.c  super_sound_player.c  super_video_player.c
app/src/main/jni/include/libyuv/libyuv/: convert.h  convert_argb.h  convert_from.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
